--- a/app/css/main.css
+++ b/app/css/main.css
@@ -409,7 +409,6 @@ header p, a, h1, h2 {
 /* OUR OFFICES */
 #our_offices {
   height: 100%;
-  margin-bottom: 25px;
   max-width: 1100px; }
 
 .seats_50 {
@@ -418,11 +417,81 @@ header p, a, h1, h2 {
   background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 30%, rgba(221, 136, 42, 0.9) 60%), url("../img/50_seats.png") top right no-repeat;
   background: -o-linear-gradient(left, rgba(0, 0, 0, 0) 30%, rgba(221, 136, 42, 0.9) 60%), url("../img/50_seats.png") top right no-repeat;
   background: linear-gradient(to right, rgba(0, 0, 0, 0) 30%, rgba(221, 136, 42, 0.9) 60%), url("../img/50_seats.png") top right no-repeat;
-  align-text: right; }
+  text-align: right;
+  padding: 20px; }
 
 .article {
   width: 40%;
-  align-text: center; }
+  text-align: center; }
+  .article h3 {
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    border: 3px solid #f9f6d6;
+    text-align: center;
+    font-weight: 800;
+    font-size: 2.25em;
+    color: #fff;
+    width: 365px; }
+    .article h3 span {
+      font-size: 1.25em;
+      font-weight: 600;
+      color: #2e2e2b; }
+    .article h3:before, .article h3:after {
+      content: "";
+      position: absolute;
+      border: 1px solid #f9f6d6;
+      width: 55px;
+      top: 50%; }
+    .article h3:before {
+      left: -13%; }
+    .article h3:after {
+      right: -13%; }
+  .article button {
+    background-color: #edd3b6;
+    padding: 10px 75px;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease; }
+    .article button > a {
+      color: #3c0a0d; }
+  .article button:hover {
+    background-color: #00a9da; }
+
+.text_seats {
+  margin: 25px 0;
+  text-align: justify; }
+  .text_seats > p, .text_seats > a {
+    font-size: 1.5em;
+    line-height: 1.2;
+    color: #fff; }
+  .text_seats a {
+    text-transform: lowercase;
+    position: relative;
+    right: 0; }
+    .text_seats a .icon-arrow-right2:before {
+      content: "\ea3c";
+      position: absolute;
+      font-size: 18px;
+      line-height: 30px; }
+
+.seats_20 {
+  height: 450px;
+  background: -webkit-gradient(linear, right top, left top, color-stop(30%, rgba(0, 0, 0, 0)), color-stop(60%, rgba(100, 38, 40, 0.9))), url("../img/20_seats.png") top right no-repeat;
+  background: -webkit-linear-gradient(right, rgba(0, 0, 0, 0) 30%, rgba(100, 38, 40, 0.9) 60%), url("../img/20_seats.png") top right no-repeat;
+  background: -o-linear-gradient(right, rgba(0, 0, 0, 0) 30%, rgba(100, 38, 40, 0.9) 60%), url("../img/20_seats.png") top right no-repeat;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0) 30%, rgba(100, 38, 40, 0.9) 60%), url("../img/20_seats.png") top right no-repeat;
+  text-align: right;
+  padding: 20px; }
+
+.seats_6 {
+  height: 450px;
+  background: -webkit-gradient(linear, left top, right top, color-stop(30%, rgba(0, 0, 0, 0)), color-stop(60%, rgba(132, 189, 209, 0.9))), url("../img/6_seats.png") top right no-repeat;
+  background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 30%, rgba(132, 189, 209, 0.9) 60%), url("../img/6_seats.png") top right no-repeat;
+  background: -o-linear-gradient(left, rgba(0, 0, 0, 0) 30%, rgba(132, 189, 209, 0.9) 60%), url("../img/6_seats.png") top right no-repeat;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0) 30%, rgba(132, 189, 209, 0.9) 60%), url("../img/6_seats.png") top right no-repeat;
+  text-align: right;
+  padding: 20px; }
 
 /* DISCOUNTS */
 #discount {
